--- a/app/src/main/res/layout/activity_start_screen.xml
+++ b/app/src/main/res/layout/activity_start_screen.xml
@@ -43,6 +43,7 @@
             android:layout_width="match_parent"
             android:layout_height="214dp"
             android:layout_gravity="bottom"
+            android:layout_marginBottom="-5dp"
             android:adjustViewBounds="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
