--- a/app/src/main/res/layout/activity_tutorial_lvl.xml
+++ b/app/src/main/res/layout/activity_tutorial_lvl.xml
@@ -39,7 +39,7 @@
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
                 android:onClick="onMelody"
-                android:src="@drawable/buton_music_on" />
+                android:src="@drawable/button_music" />
 
             <ImageView
                 android:id="@+id/tutorialSounds"
@@ -50,7 +50,7 @@
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
                 android:onClick="onSounds"
-                app:srcCompat="@drawable/buton_sound_on" />
+                app:srcCompat="@drawable/button_sound" />
 
             <TextView
                 android:id="@+id/tutorialStars"
