--- a/app/src/main/res/layout/activity_first_premiya.xml
+++ b/app/src/main/res/layout/activity_first_premiya.xml
@@ -26,7 +26,7 @@
             android:layout_weight="1"
             android:adjustViewBounds="true"
             android:onClick="onMelody"
-            android:src="@drawable/buton_music_on" />
+            android:src="@drawable/button_music" />
 
         <ImageView
             android:id="@+id/levelsSounds"
@@ -37,7 +37,7 @@
             android:layout_weight="1"
             android:adjustViewBounds="true"
             android:onClick="onSounds"
-            app:srcCompat="@drawable/buton_sound_on" />
+            app:srcCompat="@drawable/button_sound" />
 
         <TextView
             android:id="@+id/premiaStars"
