--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
             android:layout_marginStart="10dp"
             android:layout_weight="1"
             android:adjustViewBounds="true"
-            android:src="@drawable/buton_music_on" />
+            android:src="@drawable/button_music" />
 
         <ImageView
             android:id="@+id/menu_sound"
@@ -35,7 +35,7 @@
             android:layout_marginStart="10dp"
             android:layout_weight="1"
             android:adjustViewBounds="true"
-            app:srcCompat="@drawable/buton_sound_on" />
+            app:srcCompat="@drawable/button_sound" />
 
         <TextView
             android:id="@+id/menu_stars"
