--- a/app/src/main/res/layout/activity_premia_choose.xml
+++ b/app/src/main/res/layout/activity_premia_choose.xml
@@ -32,7 +32,7 @@
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
                 android:onClick="onMelody"
-                android:src="@drawable/buton_music_on" />
+                android:src="@drawable/button_music" />
 
             <ImageView
                 android:id="@+id/premiaSounds"
@@ -43,7 +43,7 @@
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
                 android:onClick="onSounds"
-                app:srcCompat="@drawable/buton_sound_on" />
+                app:srcCompat="@drawable/button_sound" />
 
             <TextView
                 android:id="@+id/premiaSelectStars"
