--- a/statistic-feature/src/main/res/layout/activity_statistika.xml
+++ b/statistic-feature/src/main/res/layout/activity_statistika.xml
@@ -54,7 +54,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="10dp"
                 android:layout_marginStart="20dp"
-                android:text="Уровней пройдено:"
+                android:text="@string/statistic_levels_passed"
                 android:textAlignment="textStart"
                 android:textColor="@color/buttonInfoNOTPressed"
                 android:textSize="18sp" />
